gl51-master/src/test/deca/context/invalid/test_rule3_33Or.deca
// Description
// OR doit être entre boolean

{
    int a = 2;
    boolean b = true;
    if(a || b){}//error
    //PASSED
}